# PDFtoWalletTickets

./: .gitignore  docker-compose.yml  main.py  pyproject.toml  split_pdf.py
PassMaker/: Dockerfile  create-manifest.js  image_gen.js  import_qrs.js  index.js  package.json  test.js
QRCodeExtractor/: Dockerfile  context_grabber.py  main.py  migration.py  pyproject.toml  split_pdf.py
Swift_App/: Package.swift  main.swift  wallet_maker.swift
Swift_App/.build/: debug.yaml  workspace-state.json
Swift_App/.build/arm64-apple-macosx/: build.db
Swift_App/.build/arm64-apple-macosx/debug/: Swift_App  Zip.swiftdoc  Zip.swiftmodule  Zip.swiftsourceinfo  description.json
Swift_App/.build/arm64-apple-macosx/debug/Minizip.build/: ioapi.c.d  module.modulemap  unzip.c.d  zip.c.d
Swift_App/.build/arm64-apple-macosx/debug/ModuleCache/: Combine-2EEXFBC6LM521.swiftmodule  CoreFoundation-1OC57HYH3SGVJ.swiftmodule  Darwin-3S7KCRLMCU1ZR.swiftmodule  Dispatch-33RSUXASDG2EH.swiftmodule  Foundation-3QCD39P5O1L6J.swiftmodule  IOKit-3NY1S6QY7ISSE.swiftmodule  ObjectiveC-29MTLAGJ1S7J3.swiftmodule  Observation-1WY3A8K8DZVJN.swiftmodule  SwiftOnoneSupport-X2DKXKS6THLR.swiftmodule  XPC-2VK9ZLWHWAAO3.swiftmodule  _Concurrency-6I7DIHG6UQ7S.swiftmodule  _StringProcessing-1HEZ1IS1J71SV.swiftmodule
Swift_App/.build/arm64-apple-macosx/debug/Swift_App.build/: Swift_App.swiftdoc  Swift_App.swiftmodule  main.d  (+15 more)
Swift_App/.build/repositories/Zip-06769e8d/: config  packed-refs
Swift_App/Tests/Swift_AppTests/: validate.swift
Swift_App/wallet_pass/pass.pkpass/: manifest.json  pass.json  signature
(+161 files in other folders)
