[tool.poetry]
name = "PDFtoWalletTickets"
version = "0.1.0"
description = "quick side project to convert pdfs to apple wallet format"
authors = ["Alastair Grant <85125580+aldo-g@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pyzbar = "^0.1.9"
pypdf2 = "^3.0.1"
qrcode = "^7.4.2"

[tool.poetry.dev-dependencies]
PyPDF2 = "^3.0.1"
pdf2image = "^1.16.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"